Configured swagger
