# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api/v1/
 definitions:
   dto.CreateGym:
     properties:
@@ -59,10 +60,14 @@ definitions:
       message:
         type: string
     type: object
+host: localhost:5000
 info:
   contact: { }
+  description: REST API for eSport kit App
+  title: eSport kit
+  version: "1.3"
 paths:
-  /api/v1/gym/create:
+  /gym/create:
     post:
       consumes:
         - application/json
@@ -102,7 +107,7 @@ paths:
       summary: Create Gym
       tags:
         - gym
-  /api/v1/user/login:
+  /user/login:
     post:
       consumes:
         - application/json
@@ -140,7 +145,7 @@ paths:
       summary: Learner Login
       tags:
         - auth
-  /api/v1/user/refresh-tokens:
+  /user/refresh-tokens:
     post:
       consumes:
         - application/json
@@ -178,7 +183,7 @@ paths:
       summary: User Refresh Tokens
       tags:
         - auth
-  /api/v1/user/register:
+  /user/register:
     post:
       consumes:
         - application/json
@@ -216,7 +221,7 @@ paths:
       summary: User Register
       tags:
         - auth
-  /api/v1/user/verify/{code}:
+  /user/verify/{code}:
     post:
       consumes:
         - application/json
@@ -255,4 +260,17 @@ paths:
       summary: User Verify Registration
       tags:
         - auth
+securityDefinitions:
+  AdminAuth:
+    in: header
+    name: Authorization
+    type: apiKey
+  TrainerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
+  UserAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
